# hello-worldcd29965a-6e5b-40d1-98e2-757751c6578e

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: deleteUser_service.py  executeHelloWorld_service.py  getHelloWorld_service.py  getUserDetails_service.py  loginUser_service.py  registerUser_service.py  server.py  updateUserDetails_service.py
